# cmake-gtest

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
src/: Board.cpp  CMakeLists.txt
test/: CMakeLists.txt
